--- a/package.json
+++ b/package.json
@@ -9,7 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.29.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@jup-ag/wallet-adapter": "^0.1.5",
+    "@openbook-dex/openbook-v2": "^0.2.2",
+    "@solana/spl-token": "^0.4.3",
+    "@solana/wallet-adapter-base": "^0.9.23",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/wallet-adapter-react-ui": "^0.9.35",
+    "@solana/wallet-adapter-wallets": "^0.19.32",
+    "@solana/web3.js": "^1.91.2",
+    "dayjs": "^1.11.10",
+    "decimal.js": "^10.4.3",
     "next": "14.1.3",
     "next-navigation": "^1.0.6",
     "react": "^18",
