--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.29.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@jup-ag/react-hook": "^6.0.0-beta.8",
     "@jup-ag/wallet-adapter": "^0.1.5",
     "@openbook-dex/openbook-v2": "^0.2.2",
     "@solana/spl-token": "^0.4.3",
@@ -21,6 +22,7 @@
     "@solana/web3.js": "^1.91.2",
     "dayjs": "^1.11.10",
     "decimal.js": "^10.4.3",
+    "immer": "^10.0.4",
     "next": "14.1.3",
     "next-navigation": "^1.0.6",
     "react": "^18",
@@ -28,7 +30,8 @@
     "react-icons": "^5.0.1",
     "react-slick": "^0.30.2",
     "rsuite": "^5.56.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
