--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.29.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@headlessui/react": "^1.7.18",
     "@jup-ag/react-hook": "^6.0.0-beta.8",
     "@jup-ag/wallet-adapter": "^0.1.5",
+    "@metaplex-foundation/mpl-token-metadata": "^3.2.1",
+    "@metaplex-foundation/umi-bundle-defaults": "^0.9.1",
+    "@metaplex-foundation/umi-web3js-adapters": "^0.9.1",
     "@openbook-dex/openbook-v2": "^0.2.2",
     "@solana/spl-token": "^0.4.3",
     "@solana/wallet-adapter-base": "^0.9.23",
@@ -20,21 +24,28 @@
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.91.2",
+    "@tabler/icons-react": "^3.1.0",
+    "@tanstack/react-query": "^5.28.14",
     "dayjs": "^1.11.10",
     "decimal.js": "^10.4.3",
     "immer": "^10.0.4",
     "next": "14.1.3",
     "next-navigation": "^1.0.6",
+    "next-themes": "^0.3.0",
+    "numeral": "^2.0.6",
+    "pino-pretty": "^11.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-slick": "^0.30.2",
     "rsuite": "^5.56.0",
     "slick-carousel": "^1.8.1",
+    "swr": "^2.2.5",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/numeral": "^2.0.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
