--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "analyze": "ANALYZE=true next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "lint:errors": "next lint --quiet",
+    "prettier:check": "prettier --check \"**/*.{ts,tsx}\"",
+    "prettier:write": "prettier --write \"**/*.{ts,tsx}\""
   },
   "dependencies": {
-    "@coral-xyz/anchor": "^0.29.0",
+    "@coral-xyz/anchor": "^0.28.1-beta.2",
+    "@coral-xyz/borsh": "^0.29.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@headlessui/react": "^1.7.18",
     "@jup-ag/react-hook": "^6.0.0-beta.8",
@@ -17,13 +23,13 @@
     "@metaplex-foundation/mpl-token-metadata": "^3.2.1",
     "@metaplex-foundation/umi-bundle-defaults": "^0.9.1",
     "@metaplex-foundation/umi-web3js-adapters": "^0.9.1",
-    "@openbook-dex/openbook-v2": "^0.2.2",
-    "@solana/spl-token": "^0.4.3",
+    "@openbook-dex/openbook-v2": "^0.1.9",
+    "@solana/spl-token": "^0.3.8",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-wallets": "^0.19.32",
-    "@solana/web3.js": "^1.91.2",
+    "@solana/web3.js": "^1.87.2",
     "@tabler/icons-react": "^3.1.0",
     "@tanstack/react-query": "^5.28.14",
     "dayjs": "^1.11.10",
@@ -45,16 +51,24 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.4",
+    "@testing-library/react": "^14.2.2",
+    "@types/bs58": "^4.0.4",
     "@types/node": "^20",
     "@types/numeral": "^2.0.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.0.1",
+    "babel-loader": "^9.1.3",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
+  },
+  "resolutions": {
+    "**/@coral-xyz/anchor": "0.28.1-beta.2"
   }
 }
