--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mantine/core": "^7.7.1",
     "@mantine/hooks": "^7.7.1",
     "@next/third-parties": "^14.1.4",
+    "@noble/ed25519": "^2.1.0",
     "@openbook-dex/openbook-v2": "^0.1.9",
     "@solana/spl-token": "^0.3.8",
     "@solana/wallet-adapter-base": "^0.9.23",
