--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next": "14.1.3",
     "next-navigation": "^1.0.6",
     "numeral": "^2.0.6",
+    "pino-pretty": "^11.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
