--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tabler/icons-react": "^2.20.0",
     "@tanstack/react-query": "^5.24.1",
     "@tippyjs/react": "^4.2.6",
+    "dayjs": "^1.11.10",
     "decimal.js": "^10.4.3",
     "highcharts": "^11.4.1",
     "immer": "^10.0.4",
