--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
+    "eslint-plugin-jsdoc": "^48.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
